Actions
Bug #12112
closeddevfsadm: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../devfsadm.c: In function 'main': ../devfsadm.c:393:8: error: cast between incompatible function types from 'void (*)(void *)' to 'void * (*)(void *)' [-Werror=cast-function-type] (void *(*)(void *))minor_fini_thread, ^ ../devfsadm.c: In function 'hot_cleanup': ../devfsadm.c:4311:7: error: cast between incompatible function types from 'int (*)(char *)' to 'void (*)(char *)' [-Werror=cast-function-type] ((void (*)(char *)) ^ ../devfsadm.c: In function 'matching_dev': ../devfsadm.c:4455:5: error: cast between incompatible function types from 'int (*)(char *)' to 'void (*)(char *)' [-Werror=cast-function-type] ((void (*)(char *)) ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit cb2bfa207c033ee7d25890c8c31a9010f332fe48
commit cb2bfa207c033ee7d25890c8c31a9010f332fe48 Author: Toomas Soome <tsoome@me.com> Date: 2020-01-04T11:51:26.000Z 12112 devfsadm: cast between incompatible function types Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions