12112 devfsadm: cast between incompatible function types Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>